--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "Gulp Project",
   "devDependencies": {
     "browser-sync": "^2.11.1",
+    "css-mqpacker": "^5.0.1",
     "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^3.1.0",
     "gulp-coffee": "^2.3.1",
     "gulp-imagemin": "^2.4.0",
     "gulp-minify-css": "^1.2.3",
     "gulp-notify": "^2.2.0",
+    "gulp-postcss": "^6.1.1",
     "gulp-rename": "^1.2.2",
+    "gulp-rucksack": "^0.1.3",
     "gulp-sass": "^2.2.0",
     "gulp-svgmin": "^1.2.1",
     "gulp-ttf2eot": "^1.1.1",
@@ -18,6 +20,14 @@
     "gulp-ttf2woff2": "^2.0.2",
     "gulp-uglify": "^1.5.2",
     "gulp-util": "^3.0.7",
-    "imagemin-pngquant": "^4.2.0"
+    "imagemin-pngquant": "^4.2.0",
+    "postcss-assets": "^4.1.0",
+    "postcss-center": "^1.0.0",
+    "postcss-flexbugs-fixes": "^2.0.0",
+    "postcss-import": "^8.1.2",
+    "postcss-nested": "^1.0.0",
+    "postcss-svg": "^1.0.6",
+    "precss": "^1.4.0",
+    "sugarss": "^0.1.5"
   }
 }
