--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "css-mqpacker": "^5.0.1",
     "gulp": "^3.9.1",
     "gulp-imagemin": "^3.0.3",
+    "gulp-jade": "^1.1.0",
     "gulp-notify": "^2.2.0",
     "gulp-postcss": "^6.1.1",
     "gulp-rename": "^1.2.2",
