--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "gulp-notify": "^2.2.0",
     "gulp-postcss": "^6.1.1",
     "gulp-rename": "^1.2.2",
+    "gulp-rigger": "^0.5.8",
     "gulp-rucksack": "^0.1.3",
     "gulp-svgmin": "^1.2.2",
     "gulp-ttf2eot": "^1.1.1",
     "gulp-ttf2woff": "^1.1.0",
     "gulp-ttf2woff2": "^2.0.2",
+    "gulp-uglify": "^2.0.0",
     "imagemin-pngquant": "^5.0.0",
     "postcss-assets": "^4.1.0",
     "postcss-center": "^1.0.0",
