--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "gulp-notify": "^2.2.0",
     "gulp-postcss": "^6.1.1",
     "gulp-rename": "^1.2.2",
-    "gulp-rucksack": "^0.1.3",
     "gulp-svgmin": "^1.2.2",
     "gulp-ttf2eot": "^1.1.1",
     "gulp-ttf2woff": "^1.1.0",
@@ -20,13 +19,8 @@
     "gulp-uglify": "^2.0.0",
     "imagemin-pngquant": "^5.0.0",
     "postcss-assets": "^4.1.0",
-    "postcss-center": "^1.0.0",
     "postcss-flexbugs-fixes": "^2.0.0",
-    "postcss-import": "^8.1.2",
-    "postcss-nested": "^1.0.0",
     "postcss-svg": "^1.0.6",
-    "precss": "^1.4.0",
-    "run-sequence": "^1.2.2",
-    "sugarss": "^0.1.5"
+    "run-sequence": "^1.2.2"
   }
 }
