--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
   "private": true,
   "dependencies": {
     "jquery": "1.12.4",
-    "normalize-css": "^4.2.0"
+    "normalize-css": "^4.2.0",
+    "bourbon": "^4.2.7"
   }
 }
