--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "browser-sync": "^2.14.0",
     "css-mqpacker": "^5.0.1",
     "gulp": "^3.9.1",
+    "gulp-cssnano": "^2.1.2",
+    "gulp-if": "^2.0.2",
     "gulp-imagemin": "^3.0.3",
     "gulp-include": "^2.3.1",
     "gulp-jade": "^1.1.0",
@@ -23,6 +25,7 @@
     "postcss-assets": "^4.1.0",
     "postcss-flexbugs-fixes": "^2.0.0",
     "postcss-svg": "^1.0.6",
-    "run-sequence": "^1.2.2"
+    "run-sequence": "^1.2.2",
+    "yargs": "^6.5.0"
   }
 }
