--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "^3.0.3",
     "gulp-include": "^2.3.1",
-    "gulp-jade": "^1.1.0",
     "gulp-notify": "^3.0.0",
     "gulp-postcss": "^7.0.0",
+    "gulp-pug": "^3.3.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.0",
