--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "browser-sync": "^2.14.0",
     "css-mqpacker": "^6.0.1",
     "gulp": "^3.9.1",
+    "gulp-clean": "^0.3.2",
     "gulp-cssnano": "^2.1.2",
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "^3.0.3",
