--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "jquery": "1.12.4",
     "bourbon": "^4.3.4",
-    "family.scss": "^1.0.8"
+    "family.scss": "^1.0.8",
+    "bootstrap": "^4.0.0"
   }
 }
