--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^2.6.4",
+    "gulp-svg-sprite": "^1.4.0",
     "gulp-svg-symbols": "^3.1.0",
     "gulp-svgmin": "^1.2.4",
     "gulp-ttf2eot": "^1.1.2",
