--- a/package.json
+++ b/package.json
@@ -3,23 +3,23 @@
   "version": "1.0.0",
   "description": "Gulp Project",
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-preset-env": "^1.7.0",
-    "browser-sync": "^2.24.6",
+    "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
+    "browser-sync": "^2.24.7",
     "gulp": "^3.9.1",
-    "gulp-babel": "^7.0.1",
+    "gulp-babel": "^8.0.0",
     "gulp-clean": "^0.4.0",
     "gulp-cssnano": "^2.1.3",
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "^4.1.0",
     "gulp-include": "^2.3.1",
     "gulp-notify": "^3.2.0",
-    "gulp-postcss": "^7.0.1",
+    "gulp-postcss": "^8.0.0",
     "gulp-pug": "^4.0.1",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^2.6.4",
-    "gulp-svg-sprite": "^1.4.0",
+    "gulp-svg-sprite": "^1.5.0",
     "gulp-svg-symbols": "^3.2.0",
     "gulp-svgmin": "^1.2.4",
     "gulp-ttf2eot": "^1.1.2",
@@ -28,9 +28,9 @@
     "gulp-uglify": "^3.0.1",
     "imagemin-pngquant": "^6.0.0",
     "postcss-assets": "^5.0.0",
-    "postcss-flexbugs-fixes": "^4.0.0",
+    "postcss-flexbugs-fixes": "^4.1.0",
     "postcss-svg": "^2.4.0",
     "run-sequence": "^2.2.1",
-    "yargs": "^12.0.1"
+    "yargs": "^12.0.2"
   }
 }
