--- a/package.json
+++ b/package.json
@@ -32,5 +32,11 @@
     "postcss-flexbugs-fixes": "^4.1.0",
     "postcss-svg": "^2.4.0",
     "yargs": "^12.0.2"
+  },
+  "dependencies": {
+    "bootstrap": "^4.3.1",
+    "bourbon": "^5.1.0",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.15.0"
   }
 }
