[add] browserify for javascript handling

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "devDependencies": {
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
+    "babelify": "^10.0.0",
     "browser-sync": "^2.26.5",
+    "browserify": "^16.2.3",
     "del": "^4.1.1",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
@@ -31,6 +33,8 @@
     "postcss-assets": "^5.0.0",
     "postcss-flexbugs-fixes": "^4.1.0",
     "postcss-svg": "^2.4.0",
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^2.0.0",
     "yargs": "^12.0.2"
   },
   "dependencies": {
